# nzm

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  Dockerfile  Makefile  NZM_FEATURE_PARITY.md  NZM_TDD_DEVELOPMENT_PLAN.md  PLAN_TO_MAKE_NTM.md  README.md  ZELLIJ_MIGRATION_PLAN.md  codecov.yml  go.mod  go.sum  install.sh
.beads/: issues.jsonl
.claude/: agents  settings.json  skills
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/ntm/: main.go
cmd/nzm/: attach.go  kill.go  main.go  send.go  spawn.go  status.go
docs/: ORCHESTRATION_FEATURES.md  WORKFLOW_SCHEMA.md
examples/: hooks.toml
internal/agentmail/: ambiguity_test.go  client.go  client_test.go  errors.go  session.go  session_fallback_test.go  session_test.go  tools.go  types.go
internal/alerts/: alerts_test.go  generator.go  generator_other.go  generator_unix.go  robot.go  tracker.go  types.go
internal/auth/: claude.go  claude_test.go  restart.go  restart_test.go
internal/bv/: bv.go  bv_test.go  types.go
internal/cass/: client.go  client_test.go  dedup.go  health.go  robustness_test.go  search.go  timeline.go  types.go  types_test.go
internal/checkpoint/: auto.go  capture.go  capture_test.go  checkpoint_test.go  sanitize_test.go  storage.go  types.go
internal/cli/: add.go  agent_spec.go  agent_spec_test.go  analytics.go  analytics_test.go  bind.go  cass.go  changes.go  checkpoint.go  git.go  (+62 more)
plugin/nzm-agent/: Cargo.toml
plugin/nzm-agent/src/: commands.rs  ipc.rs  lib.rs  plugin.rs  state.rs
scripts/: postinstall.sh
vscode/: .vscodeignore  package.json
(+302 files in other folders)
