[package]
name = "nzm-agent"
version = "0.1.0"
edition = "2021"
description = "NZM Zellij plugin for AI agent pane orchestration"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.41.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
